Fix label overlapping for input with buttons

--- a/docs/assets/src/scss/_component-examples.scss
+++ b/docs/assets/src/scss/_component-examples.scss
@@ -120,7 +120,7 @@
 
 .bd-example {
   padding: 1rem;
-  margin: 1rem (-$grid-gutter-width / 2) 0;
+  margin-top: 1rem;
   border: solid #F3F3F5;
   border-width: 4px;
   border-top-left-radius: 4px;
@@ -130,8 +130,6 @@
 
   @include media-breakpoint-up(sm) {
     padding: 1.5rem;
-    margin-right: 0;
-    margin-left: 0;
     border-width: .2rem;
   }
 
